feat: add form without adaptive

--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -7,4 +7,6 @@
     --palette-secondary-text: #030303;
     --palette-tertiary-text: #9d8665;
     --palette-tertiary-main: #E7E7E7;
+    --palette-tertiary-light: #BCBCBC;
+    --palette-tertiary-dark: #939393;
 }
