fix: fixed form opening

--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -42,10 +42,12 @@
                     <span class="tickets-amount__price-title">Total €</span>
                     <span class="tickets-amount__price-value"></span>
                 </div>
-                <button class="tickets-amount__btn">Buy Now</button>
+                <label class="tickets-amount__btn" for="tickets-form-toggler">Buy Now</label>
             </div>
         </div>
+        <input id="tickets-form-toggler" type="checkbox">
         <form class="tickets-form" action="">
+            <label class="tickets-form-close" for="tickets-form-toggler"></label>
             <div class="tickets-form__wrapper">
                 <div class="tickets-form__left">
                     <svg class="tickets-form__logo-image" width="85" height="41" viewBox="0 0 49 26" fill="none" xmlns="http://www.w3.org/2000/svg">
