--- a/src/scss/sections/main/tickets/_tickets.scss
+++ b/src/scss/sections/main/tickets/_tickets.scss
@@ -1,8 +1,9 @@
 .tickets {
     width: 100%;
     height: 100%;
-    position: relative;
-    &__container {}
+    &__container {
+        position: relative;
+    }
     &__title {
         display: flex;
         border-bottom: 3px solid var(--palette-primary-dark);
