feat: some fixes on form

--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -381,6 +381,7 @@
                     </div>
                 </div>
             </div>
+            <button class="tickets-form__btn-submit" type="submit">Book</button>
     </div>
     </div>
     </form>
