--- a/src/scss/sections/main/tickets/_form.scss
+++ b/src/scss/sections/main/tickets/_form.scss
@@ -67,6 +67,7 @@
         gap: 10px;
         @include media-breakpoint-down(lg) {
             flex-direction: column;
+            padding: 80px 15px;
         }
     }
     &__left {
@@ -74,6 +75,9 @@
         flex-direction: column;
         gap: 15px;
         max-width: 400px;
+        @include media-breakpoint-down(lg) {
+            max-width: 100%;
+        }
     }
     &__logo-image {
         path {
@@ -84,6 +88,12 @@
         font-weight: 400;
         font-size: 43px;
         letter-spacing: 0;
+        @include media-breakpoint-down(lg) {
+            font-size: 38px;
+        }
+        @include media-breakpoint-down(sm) {
+            font-size: 30px;
+        }
     }
     &__subtitle {
         width: 100%;
@@ -105,17 +115,26 @@
         cursor: text;
     }
     &__overview {
+        display: flex;
+        flex-direction: column;
         max-width: 530px;
         width: 100%;
         padding: 25px 30px;
         border: 1px solid var(--palette-primary-main);
         position: relative;
+        @include media-breakpoint-down(lg) {
+            max-width: 100%;
+            padding: 20px 15px;
+        }
     }
     &__overview-title {
         font-family: 'Roboto', sans-serif;
         font-weight: 500;
         font-size: 32px;
         color: var(--palette-secondary-text);
+        @include media-breakpoint-down(sm) {
+            font-size: 28px;
+        }
     }
     &__overview-subtitle {
         display: flex;
@@ -124,6 +143,9 @@
         font-size: 22px;
         color: var(--palette-primary-dark);
         margin-bottom: 10px;
+        @include media-breakpoint-down(sm) {
+            font-size: 18px;
+        }
     }
     &__overview-image {
         max-width: 150px;
@@ -134,6 +156,38 @@
         position: absolute;
         top: 25px;
         right: 30px;
+        @include media-breakpoint-down(sm) {
+            max-width: 120px;
+            max-height: 96px;
+        }
+        @include media-breakpoint-down(s) {
+            max-width: 90px;
+            max-height: 70px;
+        }
+    }
+    &__btn-submit {
+        display: flex;
+        align-self: flex-end;
+        max-width: 220px;
+        padding: 11px 87px;
+        margin-top: 80px;
+        background-color: var(--palette-primary-dark);
+        color: var(--palette-primary-text);
+        font-family: "Roboto", sans-serif;
+        font-weight: 300;
+        font-size: 22px;
+        text-align: center;
+        transition-duration: 0.2s;
+        border: none;
+        @include media-breakpoint-down(s) {
+            align-self: center;
+        }
+        &:hover {
+            box-shadow: 0 0 24px 0 var(--palette-secondary-light);
+        }
+        &:active {
+            background-color: var(--palette-secondary-light);
+        }
     }
 }
 
@@ -277,6 +331,10 @@
         font-weight: 300;
         font-size: 18px;
         color: var(--palette-secondary-text);
+        @include media-breakpoint-down(sm) {
+            margin-left: 5px;
+            font-size: 15px;
+        }
     }
     &__row-age {
         margin-top: 15px;
@@ -285,6 +343,9 @@
         font-family: 'Roboto', sans-serif;
         font-weight: 400;
         font-size: 22px;
+        @include media-breakpoint-down(sm) {
+            font-size: 18px;
+        }
     }
     &__total-summ {
         display: flex;
@@ -296,6 +357,12 @@
     &__cards {
         position: relative;
         width: 470px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 15px;
+        @include media-breakpoint-down(md) {
+            width: 100%;
+        }
     }
     &__card {
         max-width: 360px;
@@ -306,6 +373,10 @@
         padding: 15px 20px;
         gap: 10px;
         border-radius: 5px;
+        @include media-breakpoint-down(md) {
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
     &__card:first-child {
         background-color: var(--palette-tertiary-light);
@@ -318,6 +389,10 @@
         top: 30px;
         right: 0;
         z-index: -1;
+        @include media-breakpoint-down(md) {
+            position: relative;
+            height: 210px;
+        }
         &::before {
             content: "";
             position: absolute;
