feat: add form and user page

--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -1,12 +1,12 @@
 :root {
-    --palette-primary-main: #030303;
-    --palette-primary-dark: #710707;
-    --palette-primary-light: #FFFFFF;
-    --palette-secondary-light: #9d8665;
-    --palette-primary-text: #FFFFFF;
-    --palette-secondary-text: #030303;
-    --palette-tertiary-text: #9d8665;
-    --palette-tertiary-main: #E7E7E7;
-    --palette-tertiary-light: #BCBCBC;
-    --palette-tertiary-dark: #939393;
+  --palette-primary-main: #030303;
+  --palette-primary-dark: #710707;
+  --palette-primary-light: #ffffff;
+  --palette-secondary-light: #9d8665;
+  --palette-primary-text: #ffffff;
+  --palette-secondary-text: #030303;
+  --palette-tertiary-text: #9d8665;
+  --palette-tertiary-main: #e7e7e7;
+  --palette-tertiary-light: #bcbcbc;
+  --palette-tertiary-dark: #939393;
 }
