--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -25,4 +25,6 @@
 @import "sections/main/tickets/form";
 @import "sections/main/parallax";
 @import "sections/main/contacts";
+//User page
+@import "sections/user";
 @import "sections/footer";
