--- a/src/scss/sections/header/burger.scss
+++ b/src/scss/sections/header/burger.scss
@@ -1,212 +1,212 @@
 .burger-toggler {
-    display: none;
+  display: none;
 }
 
 .burger-toggler:checked {
-    &~.header {
-        .header__container {
-            .burger-menu {
-                transform: translateX(0%);
-            }
-            .burger {
-                width: 26px;
-                height: 26px;
-                &__buns {
-                    top: 12px;
-                    left: -3px;
-                    transform: rotate(45deg);
-                    &::before {
-                        top: 0;
-                    }
-                    &::after {
-                        transform: rotate(90deg);
-                        top: 0;
-                    }
-                }
-            }
+  & ~ .header {
+    .header__container {
+      .burger-menu {
+        transform: translateX(0%);
+      }
+      .burger {
+        width: 26px;
+        height: 26px;
+        &__buns {
+          top: 12px;
+          left: -3px;
+          transform: rotate(45deg);
+          &::before {
+            top: 0;
+          }
+          &::after {
+            transform: rotate(90deg);
+            top: 0;
+          }
         }
+      }
     }
-    &~.main {
-        @include media-breakpoint-down(xl) {
-            .hero {
-                &__container {
-                    .hero__title {
-                        transform: translateX(-100%);
-                    }
-                }
-            }
+  }
+  & ~ .main {
+    @include media-breakpoint-down(xl) {
+      .hero {
+        &__container {
+          .hero__title {
+            transform: translateX(-100%);
+          }
         }
-        @include media-breakpoint-down(md) {
-            overflow-y: hidden;
-            .hero {
-                &__container {
-                    opacity: 0;
-                }
-            }
-        }
+      }
     }
+    @include media-breakpoint-down(md) {
+      overflow-y: hidden;
+      .hero {
+        &__container {
+          opacity: 0;
+        }
+      }
+    }
+  }
 }
 
 .burger-menu {
-    display: none;
-    flex-direction: column;
-    height: 600px;
-    position: absolute;
-    transform: translateX(-100%);
-    top: 100%;
-    left: 0;
-    background-color: var(--palette-primary-main);
-    padding: 25px;
-    z-index: 4;
-    transition: 0.5s;
-    gap: 10px;
-    &__container {
-        overflow: auto;
-        .socials {
-            display: none;
-        }
+  display: none;
+  flex-direction: column;
+  height: 645px;
+  position: absolute;
+  transform: translateX(-100%);
+  top: 100%;
+  left: 0;
+  background-color: var(--palette-primary-main);
+  padding: 40px 25px;
+  z-index: 4;
+  transition: 0.5s;
+  gap: 10px;
+  &__container {
+    overflow: auto;
+    .socials {
+      display: none;
     }
-    @include media-breakpoint-down(xl) {
+  }
+  @include media-breakpoint-down(xl) {
+    display: flex;
+    width: 40%;
+  }
+  @include media-breakpoint-down(md) {
+    width: 100%;
+    max-height: 100vh;
+    height: 100vh;
+    padding-bottom: 120px;
+    &__container {
+      .socials {
         display: flex;
-        width: 40%;
+        background-color: var(--palette-primary-main);
+        position: absolute;
+        bottom: 118px;
+        left: 0;
+        border-top: 1px solid var(--palette-primary-light);
+      }
+    }
+  }
+  .burger-nav {
+    &__list {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 10px;
+    }
+    &__list-item {
+      display: flex;
+      width: 100%;
+      .nav__list-link {
+        display: inline-flex;
+        justify-content: space-between;
+        align-items: center;
+        .nav__list-link-text {
+          max-width: 150px;
+          font-family: "Roboto", sans-serif;
+          font-weight: 100;
+          font-size: 22px;
+          letter-spacing: 2px;
+          @include media-breakpoint-down(xl) {
+            font-weight: 300;
+            font-size: 20px;
+          }
+        }
+        .burger-nav-link__arrow {
+          width: 30px;
+        }
+        &:hover {
+          .burger-nav-link__arrow {
+            path {
+              fill: var(--palette-secondary-light);
+            }
+          }
+        }
+      }
+    }
+  }
+  .burger-gallery {
+    position: relative;
+    display: none;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    &__item {
+      display: flex;
+      width: 100%;
+      @include media-breakpoint-down(sm) {
+        max-width: 95px;
+        max-height: 95px;
+      }
+    }
+    &__item:first-child {
+      grid-row-start: 1;
+      grid-column-start: 1;
+      grid-row-end: 2;
+      grid-column-end: 3;
+    }
+    &__item-image {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
     @include media-breakpoint-down(md) {
-        width: 100%;
-        max-height: 100vh;
-        height: 100vh;
-        padding-bottom: 120px;
-        &__container {
-            .socials {
-                display: flex;
-                background-color: var(--palette-primary-main);
-                position: absolute;
-                bottom: 118px;
-                left: 0;
-                border-top: 1px solid var(--palette-primary-light);
-            }
-        }
+      display: grid;
     }
-    .burger-nav {
-        &__list {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            gap: 10px;
-        }
-        &__list-item {
-            display: flex;
-            width: 100%;
-            .nav__list-link {
-                display: inline-flex;
-                justify-content: space-between;
-                align-items: center;
-                .nav__list-link-text {
-                    max-width: 150px;
-                    font-family: "Roboto", sans-serif;
-                    font-weight: 100;
-                    font-size: 22px;
-                    letter-spacing: 2px;
-                    @include media-breakpoint-down(xl) {
-                        font-weight: 300;
-                        font-size: 20px;
-                    }
-                }
-                .burger-nav-link__arrow {
-                    width: 30px;
-                }
-                &:hover {
-                    .burger-nav-link__arrow {
-                        path {
-                            fill: var(--palette-secondary-light);
-                        }
-                    }
-                }
-            }
-        }
+    @include media-breakpoint-down(sm) {
+      display: flex;
+      flex-wrap: nowrap;
+      gap: 10px;
     }
-    .burger-gallery {
-        position: relative;
-        display: none;
-        flex-wrap: wrap;
-        width: 100%;
-        justify-content: center;
-        grid-template-rows: repeat(2, 1fr);
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        &__item {
-            display: flex;
-            width: 100%;
-            @include media-breakpoint-down(sm) {
-                max-width: 95px;
-                max-height: 95px;
-            }
-        }
-        &__item:first-child {
-            grid-row-start: 1;
-            grid-column-start: 1;
-            grid-row-end: 2;
-            grid-column-end: 3;
-        }
-        &__item-image {
-            display: flex;
-            width: 100%;
-            height: 100%;
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
-        }
-        @include media-breakpoint-down(md) {
-            display: grid;
-        }
-        @include media-breakpoint-down(sm) {
-            display: flex;
-            flex-wrap: nowrap;
-            gap: 10px;
-        }
-        @include media-breakpoint-down(s) {
-            gap: 5px;
-        }
+    @include media-breakpoint-down(s) {
+      gap: 5px;
     }
+  }
 }
 
 .burger {
-    position: relative;
+  position: relative;
+  width: 32px;
+  height: 23px;
+  display: none;
+  align-items: center;
+  margin: 10px 20px;
+  &__buns {
+    position: absolute;
     width: 32px;
-    height: 23px;
-    display: none;
-    align-items: center;
-    margin: 10px 20px;
-    &__buns {
-        position: absolute;
-        width: 32px;
-        height: 3px;
-        top: 0;
-        left: 0;
-        background-color: var(--palette-primary-light);
-        transition-duration: 0.3s;
-        opacity: 1;
-        &::before,
-        &::after {
-            content: "";
-            position: absolute;
-            right: 0;
-            width: 32px;
-            height: 3px;
-            background-color: var(--palette-primary-light);
-            transition-duration: 0.3s;
-        }
-        &::before {
-            top: 10px;
-        }
-        &::after {
-            top: 20px;
-        }
+    height: 3px;
+    top: 0;
+    left: 0;
+    background-color: var(--palette-primary-light);
+    transition-duration: 0.3s;
+    opacity: 1;
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      right: 0;
+      width: 32px;
+      height: 3px;
+      background-color: var(--palette-primary-light);
+      transition-duration: 0.3s;
     }
-    @include media-breakpoint-down(xl) {
-        display: flex;
+    &::before {
+      top: 10px;
     }
+    &::after {
+      top: 20px;
+    }
+  }
+  @include media-breakpoint-down(xl) {
+    display: flex;
+  }
 }
