--- a/src/scss/sections/main/_hero.scss
+++ b/src/scss/sections/main/_hero.scss
@@ -1,187 +1,195 @@
 .hero {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: var(--palette-primary-main);
+  &__container {
+    display: flex;
+    justify-content: flex-end;
     position: relative;
-    width: 100%;
-    height: 100%;
-    background-color: var(--palette-primary-main);
-    &__container {
-        display: flex;
-        justify-content: flex-end;
-        position: relative;
-        @include media-breakpoint-down(md) {
-            flex-direction: column;
-            align-items: center;
-        }
+    @include media-breakpoint-down(md) {
+      flex-direction: column;
+      align-items: center;
     }
-    &__title {
-        position: absolute;
-        top: 15%;
-        left: 20px;
-        transform: translateX(0%);
-        transition: 0.5s;
-        z-index: 3;
-        @include media-breakpoint-down(md) {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            position: relative;
-            top: 0;
-            left: 0;
-        }
-        .title {
-            color: var(--palette-primary-text);
-        }
-        .btn {
-            max-width: 360px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-top: 55px;
-            font-family: "Roboto", sans-serif, sans-serif;
-            font-weight: 300;
-            font-size: 22px;
-            letter-spacing: 2px;
-            padding: 25px 64px;
-            border: none;
-            border-radius: 10px;
-            background-color: var(--palette-primary-dark);
-            color: var(--palette-primary-text);
-            transition-duration: 0.3s;
-            @include media-breakpoint-down(xl) {
-                padding: 20px 50px;
-            }
-            @include media-breakpoint-down(lg) {
-                max-width: 320px;
-                padding: 15px 40px;
-            }
-            @include media-breakpoint-down(md) {
-                display: none;
-            }
-            &:hover {
-                background-color: var(--palette-secondary-light);
-                box-shadow: 0 0 24px 0 var(--palette-secondary-light);
-            }
-        }
+  }
+  &__title {
+    position: absolute;
+    top: 15%;
+    left: 20px;
+    transform: translateX(0%);
+    transition: 0.5s;
+    z-index: 3;
+    @include media-breakpoint-down(md) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      position: relative;
+      top: 0;
+      left: 0;
     }
-    &__title-desc {
-        margin-top: 20px;
-        margin-bottom: 20px;
-        font-family: "Roboto", sans-serif;
-        font-weight: 300;
-        font-size: 28px;
-        letter-spacing: 2px;
-        color: var(--palette-primary-text);
-        @include media-breakpoint-down(xl) {
-            font-size: 23px;
-        }
-        @include media-breakpoint-down(md) {
-            font-size: 20px;
-        }
-        @include media-breakpoint-down(sm) {
-            font-size: 16px;
-        }
+    .title {
+      color: var(--palette-primary-text);
     }
+    .btn {
+      max-width: 360px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 55px;
+      font-family: "Roboto", sans-serif, sans-serif;
+      font-weight: 300;
+      font-size: 22px;
+      letter-spacing: 2px;
+      padding: 25px 64px;
+      border: none;
+      border-radius: 10px;
+      background-color: var(--palette-primary-dark);
+      color: var(--palette-primary-text);
+      transition-duration: 0.3s;
+      @include media-breakpoint-down(xl) {
+        padding: 20px 50px;
+      }
+      @include media-breakpoint-down(lg) {
+        max-width: 320px;
+        padding: 15px 40px;
+      }
+      @include media-breakpoint-down(md) {
+        display: none;
+      }
+      &:hover {
+        background-color: var(--palette-secondary-light);
+        box-shadow: 0 0 24px 0 var(--palette-secondary-light);
+      }
+    }
+  }
+  &__title-desc {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 28px;
+    letter-spacing: 2px;
+    color: var(--palette-primary-text);
+    @include media-breakpoint-down(xl) {
+      font-size: 23px;
+    }
+    @include media-breakpoint-down(md) {
+      font-size: 20px;
+    }
+    @include media-breakpoint-down(sm) {
+      font-size: 16px;
+    }
+  }
 }
 
 .hero-slider {
-    max-width: 1000px;
-    width: 100%;
-    overflow: hidden;
+  max-width: 1000px;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+  @include media-breakpoint-down(xl) {
+    max-width: 700px;
+  }
+  @include media-breakpoint-down(md) {
+    max-width: 100%;
+  }
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 500px;
+    height: 100%;
+    z-index: 2;
+    background: linear-gradient(
+      90deg,
+      #000000 0%,
+      rgba(0, 0, 0, 0.5) 16.19%,
+      rgba(0, 0, 0, 0) 30.73%
+    );
+  }
+  &__images {
+    display: flex;
+    height: 100%;
     position: relative;
+    transition-property: transform;
+    width: 100%;
     z-index: 1;
-    @include media-breakpoint-down(xl) {
-        max-width: 700px;
+  }
+  &__image {
+  }
+  &__next,
+  &__prev {
+    padding: 10px;
+    cursor: pointer;
+    &:hover {
+      svg {
+        path {
+          filter: brightness(0.5);
+        }
+      }
     }
+  }
+  &__next {
+  }
+  &__prev {
+  }
+  &__nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    width: 60%;
+    padding: 20px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background-color: var(--palette-primary-main);
+    z-index: 4;
     @include media-breakpoint-down(md) {
-        max-width: 100%;
+      width: 100%;
     }
-    &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 500px;
-        height: 100%;
-        z-index: 2;
-        background: linear-gradient( 90deg, #000000 0%, rgba(0, 0, 0, 0.5) 16.19%, rgba(0, 0, 0, 0) 30.73%);
+    @include media-breakpoint-down(sm) {
+      gap: 10px;
     }
-    &__images {
-        display: flex;
-        height: 100%;
-        position: relative;
-        transition-property: transform;
-        width: 100%;
-        z-index: 1;
+  }
+  &__pagination {
+    max-width: 60px;
+    display: flex;
+    gap: 5px;
+    justify-content: space-between;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+    color: var(--palette-primary-text);
+    @include media-breakpoint-down(xl) {
+      font-size: 20px;
     }
-    &__image {}
-    &__next,
-    &__prev {
-        padding: 10px;
-        cursor: pointer;
-        &:hover {
-            svg {
-                path {
-                    filter: brightness(0.5);
-                }
-            }
-        }
+    @include media-breakpoint-down(sm) {
+      font-size: 16px;
     }
-    &__next {}
-    &__prev {}
-    &__nav {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 20px;
-        width: 60%;
-        padding: 20px;
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        background-color: var(--palette-primary-main);
-        z-index: 4;
-        @include media-breakpoint-down(md) {
-            width: 100%;
-        }
-        @include media-breakpoint-down(sm) {
-            gap: 10px;
-        }
+  }
+  &__arrows {
+    display: flex;
+  }
+  &__scroll {
+    height: 8px;
+    background-color: var(--palette-primary-light);
+    border-radius: 5px;
+    max-width: 600px;
+    width: 100%;
+    cursor: pointer;
+    &:hover {
+      .swiper-scrollbar-drag {
+        filter: brightness(0.7);
+      }
     }
-    &__pagination {
-        max-width: 60px;
-        display: flex;
-        gap: 5px;
-        justify-content: space-between;
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
-        font-size: 22px;
-        color: var(--palette-primary-text);
-        @include media-breakpoint-down(xl) {
-            font-size: 20px;
-        }
-        @include media-breakpoint-down(sm) {
-            font-size: 16px;
-        }
+    .swiper-scrollbar-drag {
+      height: 100%;
+      background-color: var(--palette-primary-dark);
+      border-radius: 5px;
     }
-    &__arrows {
-        display: flex;
-    }
-    &__scroll {
-        height: 8px;
-        background-color: var(--palette-primary-light);
-        border-radius: 5px;
-        max-width: 600px;
-        width: 100%;
-        cursor: pointer;
-        &:hover {
-            .swiper-scrollbar-drag {
-                filter: brightness(0.7);
-            }
-        }
-        .swiper-scrollbar-drag {
-            height: 100%;
-            background-color: var(--palette-primary-dark);
-            border-radius: 5px;
-        }
-    }
+  }
 }
