--- a/src/scss/sections/main/tickets/_form.scss
+++ b/src/scss/sections/main/tickets/_form.scss
@@ -7,6 +7,11 @@
             opacity: 1;
             transform: scaleY(100%);
         }
+        ~.tickets-field__toggler {
+            .tickets-field__arrow {
+                transform: rotate(180deg);
+            }
+        }
     }
 }
 
@@ -98,7 +103,7 @@
     &__subtitle {
         width: 100%;
         display: flex;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 400;
         font-size: 18px;
         border-bottom: 3px solid var(--palette-primary-dark);
@@ -113,6 +118,13 @@
         display: flex;
         all: unset;
         cursor: text;
+        margin-left: 15px;
+        &::placeholder {
+            color: var(--palette-primary-main);
+            font-family: "Roboto", sans-serif;
+            font-weight: 400;
+            font-size: 18px;
+        }
     }
     &__overview {
         display: flex;
@@ -128,7 +140,7 @@
         }
     }
     &__overview-title {
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 500;
         font-size: 32px;
         color: var(--palette-secondary-text);
@@ -138,7 +150,7 @@
     }
     &__overview-subtitle {
         display: flex;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 500;
         font-size: 22px;
         color: var(--palette-primary-dark);
@@ -208,12 +220,14 @@
         display: flex;
         flex: 1 0 auto;
         margin-left: 15px;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 400;
         font-size: 18px;
     }
     &__icon {}
-    &__arrow {}
+    &__arrow {
+        transition-duration: 0.3s;
+    }
     &__droplist {
         width: 100%;
         transform: scaleY(0);
@@ -238,7 +252,7 @@
         cursor: pointer;
         transition-duration: 0.3s;
         &:hover {
-            background-color: var( --palette-tertiary-main);
+            background-color: var(--palette-tertiary-main);
         }
     }
 }
@@ -255,7 +269,7 @@
         display: flex;
         width: 100%;
         border-bottom: 2px solid var(--palette-primary-dark);
-        font-family: 'Forum', serif;
+        font-family: "Forum", serif;
         font-weight: 400;
         font-size: 18px;
         color: var(--palette-tertiary-text);
@@ -268,7 +282,7 @@
     }
     &__row-text {
         display: flex;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 400;
         font-size: 18px;
         .tickets-field__text {
@@ -288,8 +302,14 @@
         height: 25px;
         background-color: var(--palette-primary-main);
         cursor: pointer;
+        &:hover {
+            box-shadow: 0 0 24px 0 var(--palette-secondary-light);
+        }
+        &:active {
+            background-color: var(--palette-secondary-light);
+        }
         &::before {
-            content: '';
+            content: "";
             background-color: var(--palette-primary-light);
             width: 10px;
             height: 2px;
@@ -301,7 +321,7 @@
             position: absolute;
             top: 8px;
             left: 16px;
-            content: '';
+            content: "";
             background-color: var(--palette-primary-light);
             width: 2px;
             height: 10px;
@@ -318,16 +338,12 @@
     }
 }
 
-.price-basic {}
-
-.price-senior {}
-
 .overview {
     &__row {}
     &__row-icon {}
     &__row-text {
         margin-left: 15px;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 300;
         font-size: 18px;
         color: var(--palette-secondary-text);
@@ -340,7 +356,7 @@
         margin-top: 15px;
         display: flex;
         align-items: center;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 400;
         font-size: 22px;
         @include media-breakpoint-down(sm) {
@@ -350,7 +366,7 @@
     &__total-summ {
         display: flex;
         margin-top: 15px;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 400;
         font-size: 32px;
     }
@@ -380,9 +396,10 @@
     }
     &__card:first-child {
         background-color: var(--palette-tertiary-light);
+        z-index: 1;
     }
     &__card:last-child {
-        background-color: var( --palette-tertiary-dark);
+        background-color: var(--palette-tertiary-dark);
         position: absolute;
         align-items: flex-end;
         justify-content: flex-end;
@@ -463,7 +480,7 @@
     &__text-field {
         display: flex;
         flex-direction: column;
-        font-family: 'Roboto', sans-serif;
+        font-family: "Roboto", sans-serif;
         font-weight: 400;
         font-size: 12px;
         color: var(--palette-primary-main);
@@ -474,6 +491,9 @@
         margin-top: 5px;
         border: none;
         padding: 10px;
+        &:disabled {
+            background-color: var(--palette-primary-light);
+        }
     }
     &__back-container {
         max-width: 75px;
