--- a/src/scss/sections/main/tickets/_form.scss
+++ b/src/scss/sections/main/tickets/_form.scss
@@ -19,7 +19,7 @@
     display: none;
     &:checked {
         ~.tickets-form {
-            transform: translateX(0);
+            transform: scale(1);
         }
     }
 }
@@ -56,8 +56,8 @@
     top: 0;
     left: 0;
     z-index: 1;
-    transition-duration: 0.5s;
-    transform: translateX(100%);
+    transition-duration: 0.3s;
+    transform: scale(0);
     @include media-breakpoint-up(xxl) {
         height: 100%;
     }
