--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -8,6 +8,11 @@
         display: flex;
         justify-content: space-between;
         margin-top: 40px;
+        gap: 10px;
+        @include media-breakpoint-down(md) {
+            flex-direction: column-reverse;
+            align-items: center;
+        }
     }
     &__left {
         display: grid;
@@ -18,11 +23,35 @@
         flex-direction: column;
     }
     &__avatar-img {
-        width: 230px;
-        height: 230px;
+        max-width: 230px;
+        max-height: 230px;
+        width: 100%;
+        height: 100%;
         object-fit: cover;
         border-radius: 50%;
         border: 2px solid var(--palette-primary-main);
+    }
+    &__avatar-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-self: center;
+        padding: 11px 20px;
+        margin-top: 20px;
+        background-color: var(--palette-primary-main);
+        color: var(--palette-primary-text);
+        font-family: "Roboto", sans-serif;
+        font-weight: 400;
+        font-size: 20px;
+        border-radius: 5px;
+        transition-duration: 0.3s;
+        cursor: pointer;
+        &:hover {
+            box-shadow: 0 0 24px 0 var(--palette-secondary-light);
+        }
+        &:active {
+            background-color: var(--palette-secondary-light);
+        }
     }
     &__comment {
         display: flex;
@@ -39,6 +68,7 @@
         height: 150px;
         resize: none;
         padding: 10px;
+        margin-top: 15px;
     }
     &__comment-btn {
         padding: 11px 20px;
@@ -46,6 +76,7 @@
         color: var(--palette-primary-text);
         border-bottom-left-radius: 5px;
         border-bottom-right-radius: 5px;
+        cursor: pointer;
         transition-duration: 0.3s;
         &:hover {
             box-shadow: 0 0 24px 0 var(--palette-secondary-light);
@@ -63,33 +94,16 @@
         justify-content: space-between;
         width: 300px;
         margin-top: 40px;
+        @include media-breakpoint-down(lg) {
+            width: 100%;
+            margin-top: 20px;
+        }
     }
     &__center-title {
         font-family: "Roboto", sans-serif;
         font-weight: 400;
         font-size: 40px;
         color: var(--palette-secondary-text);
-    }
-    &__avatar-btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        align-self: center;
-        padding: 11px 20px;
-        margin-top: 20px;
-        background-color: var(--palette-primary-main);
-        color: var(--palette-primary-text);
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
-        font-size: 20px;
-        border-radius: 5px;
-        transition-duration: 0.3s;
-        &:hover {
-            box-shadow: 0 0 24px 0 var(--palette-secondary-light);
-        }
-        &:active {
-            background-color: var(--palette-secondary-light);
-        }
     }
     &__link {
         display: flex;
