feat: add admin page

--- a/src/html/includes/admin.html
+++ b/src/html/includes/admin.html
@@ -2,9 +2,99 @@
     <div class="admin__container section-container">
         <h1 class="admin__title title">Admin page</h1>
         <div class="admin__body">
-            <div class="admin__nav">
-                <a class="admin__nav-link" href="users-list.html">Users</a>
-                <a class="admin__nav-link" href="tickets-list.html">Tickets</a>
+            <div class="user-list">
+                <h2 class="user-list__title">User list</h2>
+                <table class="user-list__table">
+                    <tr class="user-list__row">
+                        <th class="user-list__data">ID</th>
+                        <th class="user-list__data">Username</th>
+                        <th class="user-list__data">Password</th>
+                        <th class="user-list__data">Email</th>
+                        <th class="user-list__data">Phone</th>
+                        <th class="user-list__data">Edit</th>
+                        <th class="user-list__data">Delete</th>
+                    </tr>
+                    <tr class="user-list__row">
+                        <td class="user-list__data">1</td>
+                        <td class="user-list__data">User1312123131</td>
+                        <td class="user-list__data">qwerty1234</td>
+                        <td class="user-list__data">user@mail.ru</td>
+                        <td class="user-list__data">+375339999999</td>
+                        <td class="user-list__data data-btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                        </td>
+                        <td class="user-list__data data-btn">
+                            <span class="data-btn-remove"></span>
+                        </td>
+                    </tr>
+                    <tr class="user-list__row">
+                        <td class="user-list__data">2</td>
+                        <td class="user-list__data">User2131</td>
+                        <td class="user-list__data">qwerty3131311234</td>
+                        <td class="user-list__data">user31312@mail.ru</td>
+                        <td class="user-list__data">+375339999999</td>
+                        <td class="user-list__data data-btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48"><path d="M6 34.5v7.5h7.5l22.13-22.13-7.5-7.5-22.13 22.13zm35.41-20.41c.78-.78.78-2.05 0-2.83l-4.67-4.67c-.78-.78-2.05-.78-2.83 0l-3.66 3.66 7.5 7.5 3.66-3.66z"/><path fill="none" d="M0 0h48v48h-48z"/></svg>
+                        </td>
+                        <td class="user-list__data data-btn">
+                            <span class="data-btn-remove"></span>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="edit-ticket">
+                <h2 class="user-list__title">Ticket</h2>
+                <form action="" class="edit-ticket__body">
+                    <div class="edit-ticket__data">
+                        <span class="data__title">Edit date</span>
+                        <ul class="data__list">
+                            <li class="data__list-item">
+                                <input class="data__value" type="date" value="2022-01-01">
+                                <span class="data-btn-remove"></span>
+                            </li>
+                            <li class="data__list-item">
+                                <input class="data__value" type="date" value="2022-01-01">
+                                <span class="data-btn-remove"></span>
+                            </li>
+                            <li class="data__list-item">
+                                <input class="data__value" type="date" value="2022-01-01">
+                                <span class="data-btn-remove"></span>
+                            </li>
+                        </ul>
+                        <button type="submit" class="data__add-btn">Add</button>
+                    </div>
+                    <div class="edit-ticket__data">
+                        <span class="data__title">Edit time</span>
+                        <ul class="data__list">
+                            <li class="data__list-item">
+                                <input class="data__value" type="time" value="12:12">
+                                <span class="data-btn-remove"></span>
+                            </li>
+                            <li class="data__list-item">
+                                <input class="data__value" type="time" value="12:12">
+                                <span class="data-btn-remove"></span>
+                            </li>
+                            <li class="data__list-item">
+                                <input class="data__value" type="time" value="12:12">
+                                <span class="data-btn-remove"></span>
+                            </li>
+                        </ul>
+                        <button type="submit" class="data__add-btn">Add</button>
+                    </div>
+                    <div class="edit-ticket__data">
+                        <span class="data__title">Edit price</span>
+                        <div class="edit-ticket__price-container">
+                            <label class="edit-ticket__price-inner" for="basic-price">
+                          <span class="price-inner__title">Basic 18+(€)</span>
+                          <input class="edit-ticket__field" type="number" id="basic-price" value="20">
+                        </label>
+                            <label class="edit-ticket__price-inner" for="senior-price">
+                            <span class="price-inner__title">Senior 65+(€)</span>
+                          <input class="edit-ticket__field" type="number" id="senior-price" value="10">
+                        </label>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
