--- a/src/scss/sections/_admin.scss
+++ b/src/scss/sections/_admin.scss
@@ -1,42 +1,190 @@
 .admin {
-    &__container {
-        min-height: 60vh;
-        display: flex;
-        flex-direction: column;
-    }
+    &__container {}
     &__title {}
-    &__body {
+    &__body {}
+}
+
+.user-list {
+    margin-top: 40px;
+    &__title {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 400;
+        font-size: 32px;
+        color: var(--palette-secondary-text);
+        padding-bottom: 10px;
+        border-bottom: 2px solid var(--palette-primary-dark);
+    }
+    &__table {
+        margin-top: 20px;
+        width: 100%;
+        text-align: center;
+        border-spacing: 0px;
+        border-collapse: collapse;
+        border-radius: 5px;
+        border: 1px solid var(--palette-primary-main);
+    }
+    &__row {
+        &:first-child {
+            background-color: var(--palette-primary-main);
+            .user-list__data {
+                color: var(--palette-primary-text);
+                font-family: 'Roboto', sans-serif;
+                font-weight: 300;
+                font-size: 22px;
+            }
+        }
+    }
+    &__data {
+        padding: 20px;
+        color: var(--palette-secondary-text);
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+        font-size: 20px;
+    }
+}
+
+.edit-ticket {
+    margin-top: 40px;
+    &__data {
+        max-width: 300px;
         width: 100%;
         display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 80px;
+        flex-direction: column;
+        justify-content: space-between;
+        border-bottom: 1px solid var(--palette-primary-main);
+        border-left: 1px solid var(--palette-primary-main);
+        border-right: 1px solid var(--palette-primary-main);
     }
-    &__nav {
+    &__body {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        margin-top: 20px;
+    }
+    &__price-container {
+        display: flex;
+        flex-direction: column;
+        flex: 1 1 auto;
+        gap: 10px;
+        padding: 10px;
+    }
+    &__price-inner {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        max-width: 600px;
-        width: 100%;
+        font-family: 'Roboto', sans-serif;
+        font-size: 20px;
+        font-weight: 300;
     }
-    &__nav-link {
-        max-width: 400px;
-        padding: 11px 20px;
+    &__field {
+        max-width: 100px;
+        padding: 10px;
+        text-align: center;
+        border: 2px solid var(--palette-tertiary-main);
+        all: unset;
+        cursor: text;
+    }
+}
+
+.price-inner {
+    &__title {
+        display: flex;
+        flex: 1 0 auto;
+        align-items: center;
+        background-color: var(--palette-tertiary-main);
+        padding: 10px;
+        border: 2px solid var(--palette-tertiary-main);
+    }
+}
+
+.data {
+    &__title {
+        display: flex;
+        padding: 10px;
         background-color: var(--palette-primary-main);
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+        font-size: 22px;
+        color: var(--palette-primary-text);
+    }
+    &__list {}
+    &__list-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
+        max-width: 400px;
+        padding: 10px;
+    }
+    &__value {
+        display: flex;
+        flex: 1 0 auto;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+        font-size: 20px;
+        color: var(--palette-secondary-text);
+    }
+    &__remove-icon {}
+    &__add-btn {
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-        color: var(--palette-primary-text);
+        background-color: var(--palette-secondary-light);
+        border: none;
+        padding: 11px 20px;
         font-family: 'Roboto', sans-serif;
-        font-size: 32px;
-        font-weight: 400;
-        border-radius: 5px;
+        font-size: 20px;
+        font-weight: 300;
+        color: var(--palette-primary-text);
+        cursor: pointer;
         transition-duration: 0.3s;
         &:hover {
-            box-shadow: 0 0 24px 0 var(--palette-secondary-light);
+            background-color: var( --palette-tertiary-main);
+            color: var(--palette-secondary-text);
         }
         &:active {
-            background-color: var(--palette-secondary-light);
+            background-color: var(--palette-tertiary-light);
         }
+    }
+}
+
+.data-btn {
+    cursor: pointer;
+    transition-duration: 0.3s;
+    &:hover {
+        background-color: var( --palette-tertiary-main);
+    }
+}
+
+.data-btn-remove {
+    position: relative;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    transition-duration: 0.2s;
+    &::before,
+    &:after {
+        position: absolute;
+        content: "";
+        z-index: 1;
+        background-color: var(--palette-primary-main);
+        width: 22px;
+        height: 3px;
+        right: -1px;
+        top: 8px;
+        border-radius: 5px;
+    }
+    &::before {
+        transform: rotate(45deg);
+    }
+    &:after {
+        transform: rotate(-45deg);
+    }
+    &:active {
+        opacity: 0.5;
     }
 }
