feat: adaptive to table in admin page

--- a/src/scss/sections/_admin.scss
+++ b/src/scss/sections/_admin.scss
@@ -13,6 +13,9 @@
         color: var(--palette-secondary-text);
         padding-bottom: 10px;
         border-bottom: 2px solid var(--palette-primary-dark);
+        @include media-breakpoint-down(xl) {
+            font-size: 28px;
+        }
     }
     &__table {
         margin-top: 20px;
@@ -28,9 +31,10 @@
             background-color: var(--palette-primary-main);
             .user-list__data {
                 color: var(--palette-primary-text);
-                font-family: 'Roboto', sans-serif;
-                font-weight: 300;
                 font-size: 22px;
+                @include media-breakpoint-down(xl) {
+                    font-size: 18px;
+                }
             }
         }
     }
@@ -40,6 +44,14 @@
         font-family: 'Roboto', sans-serif;
         font-weight: 300;
         font-size: 20px;
+        @include media-breakpoint-down(xl) {
+            font-size: 16px;
+        }
+        @include media-breakpoint-down(lg) {
+            padding: 10px;
+            overflow: auto;
+            max-width: 40px;
+        }
     }
 }
 
@@ -60,6 +72,7 @@
         justify-content: space-between;
         gap: 20px;
         margin-top: 20px;
+        flex-wrap: wrap;
     }
     &__price-container {
         display: flex;
@@ -152,8 +165,14 @@
 .data-btn {
     cursor: pointer;
     transition-duration: 0.3s;
+    .data-btn-remove {
+        pointer-events: none;
+    }
     &:hover {
         background-color: var( --palette-tertiary-main);
+    }
+    &:active {
+        background-color: var(--palette-tertiary-light);
     }
 }
 
