--- a/src/scss/sections/header/_header.scss
+++ b/src/scss/sections/header/_header.scss
@@ -100,6 +100,7 @@
 
 .item-dropdown {
     position: relative;
+    margin-left: 20px;
     &:hover {
         .nav-dropdown {
             transform: scaleY(1);
