--- a/src/scss/sections/main/_journey.scss
+++ b/src/scss/sections/main/_journey.scss
@@ -189,7 +189,7 @@
         .swiper-pagination-bullet {
             width: 12px;
             height: 12px;
-            background-color: var(--palette-primary-dark);
+            background-color: var(--palette-tertiary-light);
             border-radius: 50%;
         }
         .swiper-pagination-bullet-active {
